咪咕榜单列表

--- a/src/ListenTogether/Pages/ChooseTagPage.xaml
+++ b/src/ListenTogether/Pages/ChooseTagPage.xaml
@@ -25,6 +25,7 @@
                                 <BindableLayout.ItemTemplate>
                                     <DataTemplate>
                                         <Button
+                                            BorderWidth="0"
                                             HeightRequest="30"
                                             BackgroundColor="Transparent"
                                             Text="{Binding Name}"
