--- a/src/ListenTogether/Pages/MiGuPage.xaml
+++ b/src/ListenTogether/Pages/MiGuPage.xaml
@@ -52,6 +52,11 @@
                                 WidthRequest="140"
                                 HeightRequest="200"
                                 ToolTipProperties.Text="{Binding Name}">
+                                <VerticalStackLayout.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MiGuPageViewModel}}, Path=GotoSongMenuPageAsyncCommand}"
+                                        CommandParameter="{Binding .}"/>
+                                </VerticalStackLayout.GestureRecognizers>
                                 <Image
                                     Source="{Binding ImageUrl}"/>
                                 <Label
