--- a/src/ListenTogether/Pages/SongMenuPage.xaml
+++ b/src/ListenTogether/Pages/SongMenuPage.xaml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:ListenTogether.Controls"
+             xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              x:Class="ListenTogether.Pages.SongMenuPage"
              Title="SongMenuPage">
     <Grid
         BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}"
-        RowDefinitions="200,*">
+        RowDefinitions="150,*">
         <HorizontalStackLayout
             Grid.Row="0"
             Margin="20,20,20,0"
@@ -24,10 +26,10 @@
                     Text="播放全部"/>
             </VerticalStackLayout>
         </HorizontalStackLayout>
-        <ScrollView
-            Grid.Row="1"
-            VerticalOptions="FillAndExpand">
-
-        </ScrollView>
+        <Border
+                Grid.Row="1"
+                StrokeThickness="0">
+            <controls:MusicResultView Musics="{Binding MusicResultCollection}"/>
+        </Border>
     </Grid>
 </ContentPage>
