--- a/src/ListenTogether/Pages/SongMenuPage.xaml
+++ b/src/ListenTogether/Pages/SongMenuPage.xaml
@@ -27,9 +27,14 @@
             </VerticalStackLayout>
         </HorizontalStackLayout>
         <Border
-                Grid.Row="1"
-                StrokeThickness="0">
-            <controls:MusicResultView Musics="{Binding MusicResultCollection}"/>
+            Grid.Row="1"
+            StrokeThickness="0">
+            <controls:MusicResultView
+                Musics="{Binding MusicResultCollection, Source={RelativeSource AncestorType={x:Type viewmodels:SongMenuPageViewModel}}}"
+                PlayCommand="{Binding PlayAsyncCommand}"
+                PlayCommandParameter="{Binding .}"
+                AddToFavoriteCommand="{Binding AddToFavoriteAsync, Source={RelativeSource AncestorType={x:Type viewmodels:MusicResultViewModel}}}"
+                AddToFavoriteCommandParameter="{Binding .}"/>
         </Border>
     </Grid>
 </ContentPage>
