--- a/src/ListenTogether/Pages/MiGuPage.xaml
+++ b/src/ListenTogether/Pages/MiGuPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
-             x:Class="ListenTogether.Pages.NetEasePage"
-             Title="NetEasePage">
+             x:Class="ListenTogether.Pages.MiGuPage"
+             Title="MiGuPage">
     <Grid
         RowDefinitions="Auto,*"
         RowSpacing="10"
